--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   camera: ^0.10.5+2
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
+  shared_preferences: ^2.1.2
 
 dev_dependencies:
   flutter_test:
